--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,4 +4,5 @@
     android:id="@+id/newsRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:listitem="@layout/news_item"
     tools:context=".MyNewsActivity"/>
