--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -13,8 +13,10 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:id="@+id/custom_view_news_content_root"
         android:layout_height="match_parent"
         android:clickable="true"
+        android:focusable="true"
         android:foreground="?attr/selectableItemBackground">
 
         <androidx.appcompat.widget.AppCompatImageView
@@ -33,7 +35,7 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/linearLayoutCompat"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@drawable/shape_gradient_background"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="@+id/news_view"
@@ -47,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="4dp"
+                android:layout_marginBottom="8dp"
                 android:maxLines="2"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
@@ -71,12 +73,11 @@
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/resource_icon"
             app:layout_constraintLeft_toRightOf="@+id/resource_icon"
             app:layout_constraintTop_toTopOf="@+id/resource_icon"
             tools:text="@sample/news.json/news/resource_name" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
