--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_news_recycler_view"
     android:layout_width="match_parent"
+    android:id="@+id/activity_news_root"
     android:layout_height="match_parent"
-    tools:listitem="@layout/news_item"
-    tools:context=".ui.NewsActivity"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/activity_news_loading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/activity_news_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:context=".ui.NewsActivity"
+        tools:listitem="@layout/news_item"
+        tools:visibility="gone"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
