--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2daf37</color>
     <color name="colorPrimaryDark">#007e00</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#007e00</color>
 
     <color name="black_0">#00000000</color>
     <color name="black_80">#CC000000</color>
