--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,60 +10,49 @@
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
         android:id="@+id/custom_view_news_content_root"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground">
 
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/news_view"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_width="132dp"
+            android:layout_height="88dp"
             android:clickable="true"
             android:foreground="?attr/selectableItemBackground"
             android:scaleType="centerCrop"
             android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/backgrounds/scenic" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/linearLayoutCompat"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/shape_gradient_background"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="@+id/news_view"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/news_title"
+            style="@style/TextAppearance.AppCompat.Subhead"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:maxLines="2"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/news_view"
             app:layout_constraintTop_toTopOf="@+id/news_view"
-            app:layout_constraintVertical_bias="1.0">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/news_title"
-                style="@style/TextAppearance.AppCompat.Headline"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
-                android:maxLines="2"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
-                tools:text="@sample/news.json/news/title" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+            tools:text="@sample/news.json/news/title" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/resource_icon"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/news_view"
+            app:layout_constraintStart_toStartOf="@+id/news_title"
             tools:src="@tools:sample/backgrounds/scenic" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -73,7 +60,7 @@
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/resource_icon"
             app:layout_constraintLeft_toRightOf="@+id/resource_icon"
             app:layout_constraintTop_toTopOf="@+id/resource_icon"
